Fix: Landing Page z-index, opacity 이슈해결

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,8 @@
   --bg-radio-off: #8c92ab;
   --bg-modal: #181d26;
   --txt-white: #f7f7f8;
+  --txt-yellow: #d2c030;
+  --txt-orange: #f96868;
   --tab-focused:#ffffff1a;
   --white: #ffffff;
   background: #02000e;
