--- a/src/styles/mixin_var.scss
+++ b/src/styles/mixin_var.scss
@@ -1,4 +1,5 @@
-$desktop: 1200px;
+$desktop: 1900px;
+// desktop landing page 이슈로 1900 변경
 $tablet: 768px;
 $mobile: 375px;
 
